--- a/Notebook/path/ed-donner_llm/week3/day2+pipelines_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week3/day2+pipelines_ja.ipynb
@@ -100,7 +100,7 @@
      "status": "ok",
      "timestamp": 1753759513522,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -152,7 +152,7 @@
      "status": "ok",
      "timestamp": 1753759621579,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -217,7 +217,7 @@
      "status": "ok",
      "timestamp": 1753759935802,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -290,7 +290,7 @@
      "status": "ok",
      "timestamp": 1753759952378,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -447,7 +447,7 @@
      "status": "ok",
      "timestamp": 1753760006090,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -632,7 +632,7 @@
      "status": "ok",
      "timestamp": 1753760050934,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -827,7 +827,7 @@
      "status": "ok",
      "timestamp": 1753760070240,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -1035,7 +1035,7 @@
      "status": "ok",
      "timestamp": 1753760263620,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -1160,7 +1160,7 @@
      "status": "ok",
      "timestamp": 1753760310321,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -1277,7 +1277,7 @@
      "status": "ok",
      "timestamp": 1753760368837,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -1496,7 +1496,7 @@
      "status": "ok",
      "timestamp": 1753760395510,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -1829,7 +1829,7 @@
      "status": "ok",
      "timestamp": 1753760532174,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -2272,7 +2272,7 @@
      "status": "ok",
      "timestamp": 1753760753576,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
