--- a/Notebook/path/ed-donner_llm/week3/day3+tokenizers_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week3/day3+tokenizers_ja.ipynb
@@ -60,7 +60,7 @@
      "status": "ok",
      "timestamp": 1753768463547,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -112,7 +112,7 @@
      "status": "ok",
      "timestamp": 1753768482614,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -167,7 +167,7 @@
      "status": "ok",
      "timestamp": 1753768486918,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -255,7 +255,7 @@
      "status": "ok",
      "timestamp": 1753768490131,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -322,7 +322,7 @@
      "status": "ok",
      "timestamp": 1753768490146,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -347,7 +347,7 @@
      "status": "ok",
      "timestamp": 1753768490171,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -398,7 +398,7 @@
      "status": "ok",
      "timestamp": 1753768490187,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -436,7 +436,7 @@
      "status": "ok",
      "timestamp": 1753768499697,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -476,7 +476,7 @@
      "status": "ok",
      "timestamp": 1753768499791,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -528,7 +528,7 @@
      "status": "ok",
      "timestamp": 1753768499860,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -870,7 +870,7 @@
      "status": "ok",
      "timestamp": 1753768501345,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -939,7 +939,7 @@
      "status": "ok",
      "timestamp": 1753768501413,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -996,7 +996,7 @@
      "status": "ok",
      "timestamp": 1753768501419,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -1092,7 +1092,7 @@
      "status": "ok",
      "timestamp": 1753768503002,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -1189,7 +1189,7 @@
      "status": "ok",
      "timestamp": 1753768503138,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -1234,7 +1234,7 @@
      "status": "ok",
      "timestamp": 1753768503139,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -1268,7 +1268,7 @@
      "status": "ok",
      "timestamp": 1753768503140,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -1381,7 +1381,7 @@
      "status": "ok",
      "timestamp": 1753768504376,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -1488,7 +1488,7 @@
      "status": "ok",
      "timestamp": 1753768504389,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
@@ -1622,7 +1622,7 @@
      "status": "ok",
      "timestamp": 1753768506045,
      "user": {
-      "displayName": "あぶり",
+      "displayName": "nishi74322014",
       "userId": "16971879795960868239"
      },
      "user_tz": -540
