--- a/Notebook/path/ed-donner_llm/week3/day4+models_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week3/day4+models_ja.ipynb
@@ -64,7 +64,7 @@
      "status": "ok",
      "timestamp": 1753771241367,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -114,7 +114,7 @@
      "status": "ok",
      "timestamp": 1753771320086,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -174,7 +174,7 @@
      "status": "ok",
      "timestamp": 1753771986495,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -197,7 +197,7 @@
      "status": "ok",
      "timestamp": 1753771990226,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -223,7 +223,7 @@
      "status": "ok",
      "timestamp": 1753771991882,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -273,7 +273,7 @@
      "status": "ok",
      "timestamp": 1753771994442,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -340,7 +340,7 @@
      "status": "ok",
      "timestamp": 1753771999136,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -513,7 +513,7 @@
      "status": "ok",
      "timestamp": 1753773473597,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -714,7 +714,7 @@
      "status": "ok",
      "timestamp": 1753773605792,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -795,7 +795,7 @@
      "status": "ok",
      "timestamp": 1753773616634,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -847,7 +847,7 @@
      "status": "ok",
      "timestamp": 1753773637825,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -901,7 +901,7 @@
      "status": "ok",
      "timestamp": 1753774301661,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -949,7 +949,7 @@
      "status": "ok",
      "timestamp": 1753774341981,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -1013,7 +1013,7 @@
      "status": "ok",
      "timestamp": 1753774383930,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -1201,7 +1201,7 @@
      "status": "ok",
      "timestamp": 1753774615717,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
