--- a/Notebook/path/ed-donner_llm/week3/day5+mmp_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week3/day5+mmp_ja.ipynb
@@ -62,7 +62,7 @@
      "status": "ok",
      "timestamp": 1753879987114,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -85,7 +85,7 @@
      "status": "ok",
      "timestamp": 1753880019262,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -127,7 +127,7 @@
      "status": "ok",
      "timestamp": 1753880021007,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -154,7 +154,7 @@
      "status": "ok",
      "timestamp": 1753880026303,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -201,7 +201,7 @@
      "status": "ok",
      "timestamp": 1753880031179,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -224,7 +224,7 @@
      "status": "ok",
      "timestamp": 1753880034203,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -250,7 +250,7 @@
      "status": "ok",
      "timestamp": 1753880079133,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -285,7 +285,7 @@
      "status": "ok",
      "timestamp": 1753880083396,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -315,7 +315,7 @@
      "status": "ok",
      "timestamp": 1753880087216,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -359,7 +359,7 @@
      "status": "ok",
      "timestamp": 1753880245281,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -460,7 +460,7 @@
      "status": "ok",
      "timestamp": 1753880253194,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -486,7 +486,7 @@
      "status": "ok",
      "timestamp": 1753880254230,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -647,7 +647,7 @@
      "status": "ok",
      "timestamp": 1753880269821,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -683,7 +683,7 @@
      "status": "ok",
      "timestamp": 1753880581376,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -717,7 +717,7 @@
      "status": "ok",
      "timestamp": 1753880584813,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
