--- a/Notebook/path/ed-donner_llm/week6/day2+google_colab_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week6/day2+google_colab_ja.ipynb
@@ -27,7 +27,7 @@
      "status": "ok",
      "timestamp": 1754451015119,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -141,7 +141,7 @@
      "status": "ok",
      "timestamp": 1754451020357,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -174,7 +174,7 @@
      "status": "ok",
      "timestamp": 1754451020393,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -198,7 +198,7 @@
      "status": "ok",
      "timestamp": 1754451037708,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -222,7 +222,7 @@
      "status": "ok",
      "timestamp": 1754451037731,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -254,7 +254,7 @@
      "status": "ok",
      "timestamp": 1754382244040,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -297,7 +297,7 @@
      "status": "ok",
      "timestamp": 1754382244109,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -345,7 +345,7 @@
      "status": "ok",
      "timestamp": 1754451037764,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -383,7 +383,7 @@
      "status": "ok",
      "timestamp": 1754451039907,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -415,7 +415,7 @@
      "status": "ok",
      "timestamp": 1754451039955,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -450,7 +450,7 @@
      "status": "ok",
      "timestamp": 1754451039966,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -516,7 +516,7 @@
      "status": "ok",
      "timestamp": 1754451109287,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -546,7 +546,7 @@
      "status": "ok",
      "timestamp": 1754451109290,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -581,7 +581,7 @@
      "status": "ok",
      "timestamp": 1754451120971,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -626,7 +626,7 @@
      "status": "ok",
      "timestamp": 1754451133292,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -671,7 +671,7 @@
      "status": "ok",
      "timestamp": 1754451135024,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -740,7 +740,7 @@
      "status": "ok",
      "timestamp": 1754451136532,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -768,7 +768,7 @@
      "status": "ok",
      "timestamp": 1754451139518,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -824,7 +824,7 @@
      "status": "ok",
      "timestamp": 1754451143879,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -870,7 +870,7 @@
      "status": "ok",
      "timestamp": 1754451145134,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -934,7 +934,7 @@
      "status": "ok",
      "timestamp": 1754451145364,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -998,7 +998,7 @@
      "status": "ok",
      "timestamp": 1754451150276,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -1047,7 +1047,7 @@
      "status": "ok",
      "timestamp": 1754451150282,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -1077,7 +1077,7 @@
      "status": "ok",
      "timestamp": 1754451150295,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -1141,7 +1141,7 @@
      "status": "ok",
      "timestamp": 1754451150314,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -1179,7 +1179,7 @@
      "status": "ok",
      "timestamp": 1754451150328,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -1218,7 +1218,7 @@
      "status": "ok",
      "timestamp": 1754451150339,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -1258,7 +1258,7 @@
      "status": "ok",
      "timestamp": 1754451150734,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -1310,7 +1310,7 @@
      "status": "ok",
      "timestamp": 1754451151436,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -1334,7 +1334,7 @@
      "status": "ok",
      "timestamp": 1754451156476,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -1434,7 +1434,7 @@
      "status": "ok",
      "timestamp": 1754451169028,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -1567,7 +1567,7 @@
      "status": "ok",
      "timestamp": 1754451219821,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -1596,7 +1596,7 @@
      "status": "ok",
      "timestamp": 1754451222023,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -1631,7 +1631,7 @@
      "status": "ok",
      "timestamp": 1754451252790,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -1676,7 +1676,7 @@
      "status": "ok",
      "timestamp": 1754451312568,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
