--- a/Notebook/path/ed-donner_llm/week7/day2+base_model_evaluation_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week7/day2+base_model_evaluation_ja.ipynb
@@ -31,7 +31,7 @@
      "status": "ok",
      "timestamp": 1754552256734,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -55,7 +55,7 @@
      "status": "ok",
      "timestamp": 1754552281502,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -93,7 +93,7 @@
      "status": "ok",
      "timestamp": 1754552281526,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -150,7 +150,7 @@
      "status": "ok",
      "timestamp": 1754552282113,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -418,7 +418,7 @@
      "status": "ok",
      "timestamp": 1754552292270,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -516,7 +516,7 @@
      "status": "ok",
      "timestamp": 1754552292334,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -561,7 +561,7 @@
      "status": "ok",
      "timestamp": 1754552300872,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -700,7 +700,7 @@
      "status": "ok",
      "timestamp": 1754553593438,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -856,7 +856,7 @@
     "    device_map=\"auto\",\n",
     ")\n",
     "\n",
-    "# （バッチ化などで）長さを揃えるために 「パディングトークンID」 が必要\n",
+    "# （バッチ化などで）長さを揃えるために 「pad_token_id」 が必要\n",
     "base_model.generation_config.pad_token_id = tokenizer.pad_token_id\n",
     "\n",
     "print(f\"Memory footprint: {base_model.get_memory_footprint() / 1e9:.1f} GB\")"
@@ -871,7 +871,7 @@
      "status": "ok",
      "timestamp": 1754553593646,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -903,7 +903,7 @@
      "status": "ok",
      "timestamp": 1754553593685,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -937,7 +937,7 @@
      "status": "ok",
      "timestamp": 1754553593716,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -968,7 +968,7 @@
      "status": "ok",
      "timestamp": 1754553596528,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -1013,7 +1013,7 @@
      "status": "ok",
      "timestamp": 1754553596529,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
@@ -1104,7 +1104,7 @@
      "status": "ok",
      "timestamp": 1754554025959,
      "user": {
-      "displayName": "osscjpdevinfra部長アカ",
+      "displayName": "nishi74322014",
       "userId": "05817968951108036520"
      },
      "user_tz": -540
