--- a/Notebook/path/ed-donner_llm/week7/day3-4+training_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week7/day3-4+training_ja.ipynb
@@ -303,17 +303,19 @@
    "source": [
     "# トークナイザとモデルをロード\n",
     "\n",
+    "# トークナイザをロード\n",
     "tokenizer = AutoTokenizer.from_pretrained(BASE_MODEL, trust_remote_code=True)\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
     "tokenizer.padding_side = \"right\"\n",
     "\n",
+    "# （ベース）モデルをロード\n",
     "base_model = AutoModelForCausalLM.from_pretrained(\n",
     "    BASE_MODEL,\n",
     "    quantization_config=quant_config,\n",
     "    device_map=\"auto\",\n",
     ")\n",
     "\n",
-    "# （バッチ化などで）長さを揃えるために 「パディングトークンID」 が必要\n",
+    "# （バッチ化などで）長さを揃えるために 「pad_token_id」 が必要\n",
     "base_model.generation_config.pad_token_id = tokenizer.pad_token_id\n",
     "\n",
     "print(f\"Memory footprint: {base_model.get_memory_footprint() / 1e6:.1f} MB\")"
