--- a/Notebook/path/ed-donner_llm/week7/day5+testing_our_Fine-tuned_model_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week7/day5+testing_our_Fine-tuned_model_ja.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "RUN_NAME = \"2024-09-13_13.04.39\"\n",
     "PROJECT_RUN_NAME = f\"{PROJECT_NAME}-{RUN_NAME}\"\n",
-    "REVISION = \"e8d637df551603dc86cd7a1598a8f44af4d7ae36\" # またはリビジョン=なし\n",
+    "#REVISION = \"e8d637df551603dc86cd7a1598a8f44af4d7ae36\" # またはリビジョン=なし\n",
     "FINETUNED_MODEL = f\"{HF_USER}/{PROJECT_RUN_NAME}\"\n",
     "\n",
     "# データ\n",
@@ -200,20 +200,22 @@
    "source": [
     "# トークナイザとモデルをロード\n",
     "\n",
+    "# トークナイザをロード\n",
     "tokenizer = AutoTokenizer.from_pretrained(BASE_MODEL, trust_remote_code=True)\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
     "tokenizer.padding_side = \"right\"\n",
     "\n",
+    "# （ベース）モデルをロード\n",
     "base_model = AutoModelForCausalLM.from_pretrained(\n",
     "    BASE_MODEL,\n",
     "    quantization_config=quant_config,\n",
     "    device_map=\"auto\",\n",
     ")\n",
     "\n",
-    "# （バッチ化などで）長さを揃えるために 「パディングトークンID」 が必要\n",
+    "# （バッチ化などで）長さを揃えるために 「pad_token_id」 が必要\n",
     "base_model.generation_config.pad_token_id = tokenizer.pad_token_id\n",
     "\n",
-    "# 微調整されたモデルにPEFTをロードします\n",
+    "# ファインチューニングされたPEFTモデルをロード\n",
     "if REVISION:\n",
     "  fine_tuned_model = PeftModel.from_pretrained(base_model, FINETUNED_MODEL, revision=REVISION)\n",
     "else:\n",
@@ -242,15 +244,16 @@
    "source": [
     "# 真実の瞬間！\n",
     "\n",
-    "##推論モードでモデルを使用します\n",
+    "## 推論モードでモデルを使用\n",
     "\n",
-    "GPT-4oの平均誤差は\\ $ 76でした。  \n",
-    "Llama 3.1ベースモデルの平均誤差は\\ $ 396でした。   \n",
-    "この人間には\\ $ 127の誤りがありました。  \n",
+    "- GPT-4oの平均誤差は\\ $ 76でした。  \n",
+    "- Llama 3.1ベースモデルの平均誤差は\\ $ 396でした。   \n",
+    "- この人間には\\ $ 127の誤りがありました。  \n",
     "\n",
-    "＃＃ 警告\n",
+    "## 警告\n",
     "\n",
-    "商品の価格はかなり異なることに注意してください。モデルは、情報がない販売価格のようなものを予測することはできません。"
+    "- 商品の価格はかなり異なることに注意してください。\n",
+    "- モデルは、情報がない販売価格のようなものを予測することはできません。"
    ]
   },
   {
@@ -261,6 +264,8 @@
    },
    "outputs": [],
    "source": [
+    "# 文字列から価格を抽出する関数\n",
+    "\n",
     "def extract_price(s):\n",
     "    if \"Price is $\" in s:\n",
     "      contents = s.split(\"Price is $\")[1]\n",
@@ -278,6 +283,7 @@
    },
    "outputs": [],
    "source": [
+    "# 価格抽出関数をテストする\n",
     "extract_price(\"Price is $a fabulous 899.99 or so\")"
    ]
   },
@@ -289,7 +295,7 @@
    },
    "outputs": [],
    "source": [
-    "# 元の予測関数は、最も可能性の高いトークンを必要とします\n",
+    "# itemのプロンプトからファインチューニングされたモデルが推定した値を返す\n",
     "\n",
     "def model_predict(prompt):\n",
     "    set_seed(42)\n",
@@ -308,49 +314,73 @@
    },
    "outputs": [],
    "source": [
-    "# 改善された予測関数は、上位3つの選択肢の加重平均を必要とします\n",
-    "# このコードは、事実を利用できなければ、より複雑になります\n",
-    "# そのllamaは3桁の任意の3桁のトークンを生成します\n",
+    "# 改良された予測関数は、上位3つの選択肢の加重平均を取ります\n",
+    "# このコードは、Llamaが3桁の数字に対して1つのトークンを生成するという事実を活用できなければ、より複雑になります\n",
     "\n",
-    "top_K = 3\n",
+    "top_K = 3 # 上位3個のトークンを処理対象とする\n",
     "\n",
     "def improved_model_predict(prompt, device=\"cuda\"):\n",
+    "    # ランダム性の再現性確保\n",
     "    set_seed(42)\n",
+    "    # プロンプト文字列をトークンに変換\n",
     "    inputs = tokenizer.encode(prompt, return_tensors=\"pt\").to(device)\n",
+    "    # 全トークンを活性化したマスク\n",
     "    attention_mask = torch.ones(inputs.shape, device=device)\n",
     "\n",
-    "    with torch.no_grad():\n",
-    "        outputs = fine_tuned_model(inputs, attention_mask=attention_mask)\n",
-    "        next_token_logits = outputs.logits[:, -1, :].to('cpu')\n",
+    "    # 以降が異なる\n",
+    "    # このコードは「次の1トークン」の予測確率分布：スコア（ロジット）を推論する処理\n",
     "\n",
+    "    with torch.no_grad(): # 勾配計算を無効化して推論専用にする。\n",
+    "        \n",
+    "        # モデルに入力トークン列 inputs と attention_maskを与えて順伝播する。\n",
+    "        outputs = fine_tuned_model(inputs, attention_mask=attention_mask)\n",
+    "        \n",
+    "        # LLMの場合、outputs.logits は通常 [batch_size, seq_len, vocab_size]\n",
+    "        next_token_logits = outputs.logits[:, -1, :].to('cpu')\n",
+    "        # ・各バッチについて「最後のトークン位置（-1）」のスコアだけを取り出す。\n",
+    "        # ・形状は [batch_size, vocab_size]で「次に出力しうる各語彙トークンのスコア」を表す。\n",
+    "        # ・後で numpy() にしたりCPU側で後処理するため、.to('cpu') でテンソルをCPUに移す。\n",
+    "\n",
+    "    # 次トークン生成での Top-K 手法の前処理\n",
+    "    # ロジット next_token_logits を softmax で確率分布に変換\n",
+    "    # dim=-1：最後の次元（vocab_sizeの次元）に沿ってsoftmaxで\n",
+    "    # 正規化しバッチごと合計が 1 になる確率ベクトルを得る。\n",
     "    next_token_probs = F.softmax(next_token_logits, dim=-1)\n",
+    "    # 上位K個の top_token_id 候補トークンID、top_prob 確率\n",
     "    top_prob, top_token_id = next_token_probs.topk(top_K)\n",
-    "    prices, weights = [], []\n",
-    "    for i in range(top_K):\n",
+    "\n",
+    "    # 候補トークンIDのうち、“正の数”と解釈できるもの抽出し、数値・確率を収集\n",
+    "    prices, weights = [], [] # 数値・確率\n",
+    "    for i in range(top_K): # 上位K個の候補についてループ\n",
+    "      # トークンIDを文字列にデコード\n",
     "      predicted_token = tokenizer.decode(top_token_id[0][i])\n",
+    "      # 対応する確率（もしくはスコア）を取り出し\n",
     "      probability = top_prob[0][i]\n",
+    "\n",
+    "      # 文字列が数値として解釈\n",
     "      try:\n",
+    "        # ...できれば float に変換\n",
     "        result = float(predicted_token)\n",
     "      except ValueError as e:\n",
+    "        # ...できなければ 0.0 に変換\n",
     "        result = 0.0\n",
+    "\n",
+    "      # 正の数だけを有効とみなし追加\n",
     "      if result > 0:\n",
     "        prices.append(result)\n",
     "        weights.append(probability)\n",
+    "    \n",
+    "    # 空の場合\n",
     "    if not prices:\n",
     "      return 0.0, 0.0\n",
+    "\n",
+    "    # 重みの合計で正規化し、確率による加重平均を計算\n",
     "    total = sum(weights)\n",
     "    weighted_prices = [price * weight / total for price, weight in zip(prices, weights)]\n",
+    "    \n",
+    "    # 最終的に float 型の値として返却\n",
     "    return sum(weighted_prices).item()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "lQk7jNlm1oV9"
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -360,6 +390,7 @@
    },
    "outputs": [],
    "source": [
+    "# testing.py の Tester と差はほぼなし。\n",
     "class Tester:\n",
     "\n",
     "    def __init__(self, predictor, data, title=None, size=250):\n",
@@ -436,7 +467,8 @@
    },
    "outputs": [],
    "source": [
-    "Tester.test(improved_model_predict, test)"
+    "# TestRunnerを実行\n",
+    "Tester.test(model_predict, test)"
    ]
   },
   {
@@ -446,7 +478,10 @@
     "id": "M4NSMcKl3Bhw"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# TestRunnerを実行\n",
+    "Tester.test(improved_model_predict, test)"
+   ]
   }
  ],
  "metadata": {
