--- a/Notebook/path/ed-donner_llm/week8/day1_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week8/day1_ja.ipynb
@@ -5,9 +5,9 @@
    "id": "e426cd04-c053-43e8-b505-63cee7956a53",
    "metadata": {},
    "source": [
-    "＃非常に忙しい週8フォルダーへようこそ\n",
+    "# 非常に忙しい第週8フォルダーへようこそ\n",
     "\n",
-    "##今週はたくさんあります！\n",
+    "## 今週はたくさんあります！\n",
     "\n",
     "特に熟練したLLMエンジニアになっているので、通常よりも速いペースで移動します。\n"
    ]
@@ -17,21 +17,21 @@
    "id": "b3cf5389-93c5-4523-bc48-78fabb91d8f6",
    "metadata": {},
    "source": [
-    "<テーブルスタイル= \"マージン：0;テキストアライグ：左;\">\n",
+    "<table style=\"margin: 0; text-align: left;\">\n",
     "    <tr>\n",
-    "        <td style = \"width：150px; height：150px; vertical-align：middle;\">\n",
-    "            <img src = \"../ fality.jpg\" width = \"150\" height = \"150\" style = \"display：block;\" />\n",
+    "        <td style=\"width: 150px; height: 150px; vertical-align: middle;\">\n",
+    "            <img src=\"../important.jpg\" width=\"150\" height=\"150\" style=\"display: block;\" />\n",
     "        </td>\n",
     "        <td>\n",
-    "            <h2 style = \"color：＃900;\">今週は特に重要：最新の</h2>を引きます\n",
-    "            <SPAN STYLE = \"Color：＃900;\">これらのラボを継続的に改善し、より多くの例とエクササイズを追加しています。\n",
-    "            毎週の初めに、最新のコードがあることを確認する価値があります。<br/>\n",
-    "            最初にa <a href = \"https://chatgpt.com/share/6734E705-3270-8012-A074-421661AF6BA9\">必要に応じて変更をプルしてマージします</a>。何か問題がありますか？ chatgptにマージの方法を明確にするように頼んでみてください - または私に連絡してください！<br/> <br/>\n",
-    "            LLM_Engineeringディレクトリからコードをプルした後、Anacondaプロンプト（PC）またはターミナル（MAC）で、実行してください：<br/>\n",
-    "            <code> conda env update  -  f Environment.yml -prune </code> <br/>\n",
-    "            または、AnacondaではなくVirtualenvを使用した場合は、PowerShell（PC）またはターミナル（MAC）でアクティブ化された環境からこれを実行します。<br/>\n",
-    "            <code> pip install -r requistence.txt </code>\n",
-    "            <br/>次に、カーネル（カーネルメニュー>>カーネルの再起動とすべてのセルのクリア出力）を再起動して、変更を拾います。\n",
+    "            <h2 style=\"color:#900;\">今週特に重要なのは、最新のコードを取得することです。</h2>\n",
+    "            <span style=\"color:#900;\">\n",
+    "                これらのラボは継続的に改善しており、例題や演習を追加しています。毎週初めに、最新のコードを使用していることを確認してください。<br/>\n",
+    "                先ずは、<a href=\"https://chatgpt.com/share/6734e705-3270-8012-a074-421661af6ba9\">git pullを実行し、必要に応じて変更をマージしてください</a>。 何か問題がありましたら、ChatGPTにマージ方法を尋ねるか、私にご連絡ください。<br/><br/>\n",
+    "                コードをプルした後、llm_engineeringディレクトリからAnacondaプロンプト（PC）またはターミナル（Mac）で次のコマンドを実行してください。：<br/>\n",
+    "                <code>conda env update --f environment.yml --prune</code><br/>\n",
+    "                Anacondaではなくvirtualenvを使用した場合は、Powershell（PC）またはターミナル（Mac）で、有効化した環境から次のコマンドを実行してください。：<br/>\n",
+    "                <code>pip install -r requirements.txt</code><br/>\n",
+    "                変更を反映させるため、カーネルを再起動してください（「カーネル」メニュー >> 「カーネルを再起動してすべてのセルの出力をクリア」）。\n",
     "            </span>\n",
     "        </td>\n",
     "    </tr>\n",
@@ -41,12 +41,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a8d89b1f-8a2c-45a6-8729-5b7c55151f3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 具合が悪くなったので 新仮想環境で、requirements.txt 使う。\n",
+    "#!pip install -r ../requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bc0e1c1c-be6a-4395-bbbd-eeafc9330d7e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 最初から1つのインポート!!\n",
-    "\n",
+    "# クラウド環境でAI系ワークロードを実行するためのクライアント・ライブラリ（FaaSではないらしい）\n",
+    "# https://qiita.com/cacaoMath/items/25b4561ed6335d3ed909\n",
     "import modal"
    ]
   },
@@ -57,34 +68,33 @@
    "source": [
     "# モーダルトークンのセットアップ\n",
     "\n",
-    "これを初めて実行したときは、次の行を外して実行してください。  \n",
-    "これは、コマンドラインから「モーダルセットアップ」を実行するのと同じです。モーダルに接続し、トークンをインストールします。  \n",
+    "初めて実行する際は、次の行のコメントを解除して実行してください。\n",
+    "これは、コマンドラインから `modal setup` を実行するのと同じです。モーダルに接続し、トークンをインストールします。  \n",
     "\n",
     "## Windowsでいくつかの一般的な問題をデバッグします\n",
     "\n",
-    "このコマンドが次のセルで故障した場合、または「！」のあるモーダルコマンドのいずれかが失敗した場合、アクティブ化された環境でコマンドラインで直接実行してみてください（ `！`）\n",
+    "このコマンドが次のセルで失敗するか、`!` 付きのモーダルコマンドが失敗する場合は、アクティブ化された環境でコマンドラインから直接実行してみてください（`!` は使用しないでください）。\n",
     "\n",
-    "Windowsの学生は、Windowsで、その後アクティブ化された環境でコマンドプロンプトからこのコマンドを実行する必要があるかもしれないと述べました。  \n",
-    "「モーダルトークンNew」  \n",
+    "Windows の学生から、Windows では、アクティブ化された環境でコマンドプロンプトから次のコマンドを実行する必要があるかもしれないという報告がありました。：\n",
+    "`modal token new`  \n",
     "（エドBに感謝します！）\n",
     "\n",
-    "別のWindows学生Minh N.は、コマンドラインのアクティブ化された環境から、このアプローチを使用する必要があるかもしれないと述べました。  \n",
-    "`モーダルトークンセット-token-id <your_token_id>  -  token-secret <your_token_secret>`\n",
+    "別の Windows の学生 Minh N. さんから、アクティブ化された環境でコマンドラインから次のコマンドを実行する必要があるかもしれないという報告がありました。：\n",
+    "`modal token set --token-id <your_token_id> --token-secret <your_token_secret>`\n",
     "\n",
-    "また、学生のデイビッド・Sは以下に言及しました：  \n",
-    "> Windowsを使用している他の誰かがこの問題にヒットした場合：コマンドプロンプトから「モーダルトークンnew」を実行する必要がある場合、生成されたトークンファイルを移動する必要があります。トークンファイル（.modal.toml）をWindowsプロファイルフォルダーに展開します。仮想環境はその場所を見ることができませんでした（奇妙なことに、環境変数を設定して再起動した後でもできませんでした）。そのトークンファイルをラボで操作しているフォルダーに移動し、認証エラーのスローを停止しました。\n",
+    "また、David S. さんは次のように報告しました。：  \n",
+    "> Windowsを使用している他の誰かがこの問題にヒットした場合：コマンドプロンプトから `modal token new` を実行する必要がある場合、生成されたトークンファイルを移動する必要があります。トークンファイル（.modal.toml）をWindowsプロファイルフォルダーに展開します。仮想環境はその場所を見ることができませんでした（奇妙なことに、環境変数を設定して再起動した後でもできませんでした）。そのトークンファイルをラボで操作しているフォルダーに移動し、認証エラーのスローを停止しました。\n",
     "\n",
-    "そして、別のWindowsの学生（Robert M.-ありがとう!!）別の可能なステップを追加しました：\n",
+    "そして、別のWindowsの学生（Robert M. - ありがとう!!）別の可能なステップを追加しました：\n",
     "\n",
-    "\n",
-    ">「.modal.toml」ファイルを「week8」フォルダーにコピーしてjupyterlabを再起動した後でも、トークンを見るためにモーダルを取得できませんでした（「authエラー」になります）。修正は、環境変数（標準的な方法）を手動で設定することでした。この構成方法は、XX_MARKDOWN_LINK_XXのモーダルによって説明されます  \n",
+    ">「.modal.toml」ファイルを「week8」フォルダーにコピーしてjupyterlabを再起動した後でも、トークンを見るためにモーダルを取得できませんでした（「authエラー」になります）。修正は、環境変数（標準的な方法）を手動で設定することでした。この構成方法は、[モーダルのサイト](https://modal.com/docs/reference/modal.config)によって説明されます  \n",
     "```\n",
     "import os\n",
     "os.environ[\"MODAL_TOKEN_ID\"] = \"xxx\"\n",
     "os.environ[\"MODAL_TOKEN_SECRET\"] = \"yyy\" \n",
     "```\n",
     "\n",
-    "最後に、状況によっては、これを実行した後、このJupyterノートブックのカーネルを再起動する必要があるかもしれないと聞きました。 （カーネルメニュー>>すべてのセルのカーネルとクリア出力を再起動します）。"
+    "最後に、状況によっては、これを実行した後、このJupyterノートブックのカーネルを再起動する必要があるかもしれないと聞きました（カーネルメニュー>>すべてのセルのカーネルとクリア出力を再起動します）。"
    ]
   },
   {
@@ -94,8 +104,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 次の行から「＃」を削除してセルを実行するか、アクティブ化されたコマンドプロンプトからエクスカラメーションマークなしでこのコマンドを実行します\n",
-    "# ！モーダルセットアップ"
+    "# 以下の「#」を削除して実行する。\n",
+    "# 以下では、表示されたURLから、modalサイトへのログインとOAuth系認証によるトークン発行を行う。\n",
+    "# Windowsの場合、コマンドプロンプトから「!」なしで実行する必要があるらしい。\n",
+    "!modal setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "469dbc96-b965-4edf-bc98-3a9ccd0395a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!modal token new # トークンを再取得する場合"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43d44889-80f6-4d6a-828e-7d4a67f6002d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!modal run get_started.py # Geting startedの内容に従って..."
    ]
   },
   {
@@ -105,6 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ここのimportは、`hello.py` から行っている。\n",
     "from hello import app, hello, hello_europe"
    ]
   },
@@ -115,9 +148,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# helloをローカル実行\n",
     "with app.run():\n",
     "    reply=hello.local()\n",
-    "reply"
+    "reply\n",
+    "\n",
+    "# 出力例\n",
+    "# 'Hello from Tokyo, Tokyo, JP!!'"
    ]
   },
   {
@@ -127,9 +164,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# helloをリモート実行\n",
     "with app.run():\n",
     "    reply=hello.remote()\n",
-    "reply"
+    "reply\n",
+    "\n",
+    "# 出力例\n",
+    "# 'Hello from Ashburn, Virginia, US!!'\n",
+    "# 'Hello from Montréal, Quebec, CA!!'"
    ]
   },
   {
@@ -139,12 +181,12 @@
    "source": [
     "## Student Tue Hに感謝します。\n",
     "\n",
-    "hello.pyを見ると、単純な機能を追加しましたhello_europeを追加しました\n",
+    "`hello.py` に単純な機能 `hello_europe` を追加しました。\n",
     "\n",
     "それはデコレーターを使用します：  \n",
-    "`@app.function（image = image、region =\" eu \"）`\n",
+    "`@app.function(image=image, region=\"eu\")`\n",
     "\n",
-    "以下の結果を参照してください！より多くの領域固有の設定は、[here](https://modal.com/docs/guide/region-selection)です\n",
+    "以下の結果を参照してください！より多くの領域固有の設定は [ココ](https://modal.com/docs/guide/region-selection) です\n",
     "\n",
     "地域を指定するために、わずかに多くのクレジットを消費していることに注意してください。"
    ]
@@ -156,9 +198,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# hello_europeをリモート実行\n",
     "with app.run():\n",
     "    reply=hello_europe.remote()\n",
-    "reply"
+    "reply\n",
+    "\n",
+    "# 出力例\n",
+    "# 'Hello from Brussels, Brussels Capital, BE!!'\n",
+    "# 'Hello from Frankfurt am Main, Hesse, DE!!'"
    ]
   },
   {
@@ -166,16 +213,16 @@
    "id": "22e8d804-c027-45fb-8fef-06e7bba6295a",
    "metadata": {},
    "source": [
-    "# 先に進む前に - \n",
+    "# 次に進む前に -\n",
     "\n",
-    "##モーダルの秘密としてあなたのハギングフェイストークンを設定する必要があります\n",
+    "## Hugging FaceトークンをModalのシークレットとして設定する必要があります。\n",
     "\n",
-    "1。モーダル。に移動して、サインインしてダッシュボードに移動します\n",
-    "2。ナビゲーションバーの秘密をクリックします\n",
-    "3.新しい秘密を作成し、顔を抱き締めることをクリックしてください、この新しい秘密は** hf-secret **と呼ばれる必要がありますそれは私たちがコードでそれを参照する方法だからです\n",
-    "4. HF_TOKENを紹介してください\n",
+    "1. modal.comにアクセスし、サインインしてダッシュボードに移動します。\n",
+    "2. ナビゲーションバーの「Secrets」をクリックします。\n",
+    "3. 新しいシークレットを作成し、Hugging Faceをクリックします。この新しいシークレットは `hf-secret` という名前にする必要があります。これは、コード内でこのトークンを参照するためです。\n",
+    "4. プロンプトが表示されたら、HF_TOKENを入力してください。\n",
     "\n",
-    "###そして今ビジネスに戻る：llamaと仕事をする時間"
+    "### さあ、本題に戻りましょう。Llamaを使い始めましょう。"
    ]
   },
   {
@@ -185,9 +232,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# このインポートは、画像にローカルPythonモジュールを追加することについての非推奨警告を与える可能性があります\n",
+    "# このインポートは、Dockerコンテナにpipインストールすることについての非推奨警告を与える可能性があります\n",
     "# その警告は安全に無視できます。他の場所でも同じ警告が表示される場合があります。\n",
     "\n",
+    "# ここのimportは、`llama.py` から行っている。\n",
     "from llama import app, generate"
    ]
   },
@@ -198,10 +246,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# プロンプトの後続を、最大5トークンだけ新規生成\n",
     "with modal.enable_output():\n",
     "    with app.run():\n",
     "        result=generate.remote(\"Life is a mystery, everyone must stand alone, I hear\")\n",
-    "result"
+    "result\n",
+    "# 出力例 完全再現性あり（シード固定）\n",
+    "# '<|begin_of_text|>Life is a mystery, everyone must stand alone, I hear you call my name,'"
    ]
   },
   {
@@ -211,6 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ここのimportは、`pricer_ephemeral.py` から行っている。\n",
     "import modal\n",
     "from pricer_ephemeral import app, price"
    ]
@@ -222,10 +274,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ファインチューニングしたモデルで製品価格を予測\n",
     "with modal.enable_output():\n",
     "    with app.run():\n",
     "        result=price.remote(\"Quadcast HyperX condenser mic, connects via usb-c to your computer for crystal clear audio\")\n",
-    "result"
+    "result\n",
+    "\n",
+    "# 出力例 完全再現性あり（シード固定）\n",
+    "# 133.0"
    ]
   },
   {
@@ -233,28 +289,32 @@
    "id": "04d8747f-8452-4077-8af6-27e03888508a",
    "metadata": {},
    "source": [
-    "## 一時的なアプリから展開されたアプリへの移行\n",
+    "## 一時的なアプリからデプロイ済みアプリへの移行\n",
     "\n",
-    "コマンドラインから、 `Modal Deployxxx`は展開されたアプリとしてコードを展開します\n",
+    "コマンドラインから `modal deploy xxx` を実行すると、コードがデプロイ済みアプリとしてデプロイされます。\n",
     "\n",
-    "これは、APIの後ろにAIサービスをパッケージ化して、生産システムで使用する方法です。\n",
+    "この方法で、AI サービスを API の背後にパッケージ化し、本番システムで使用できます。\n",
     "\n",
-    "パイソンから直接電話をかけるので、それをカバーすることはできませんが、レストエンドポイントを簡単に構築することもできます。\n",
+    "REST エンドポイントも簡単に構築できますが、Python から直接呼び出すため、ここでは説明しません。\n",
     "\n",
-    "##秘密に関する重要な注意\n",
+    "## シークレットに関する重要な注意事項\n",
     "\n",
-    "両方のファイルで `pricer_service.py`と` pricer_service2.py`  \n",
-    "`secrets = [modal.secret.from_name（\" hf-secret \"）]]`  \n",
-    "秘密がモーダルで構成されている方法に応じて、「HF-Secret」から「Hugging Face-Secret」に変更する必要がある場合があります。  \n",
-    "確認するには、このページにアクセスして、最初の列をご覧ください。  \n",
+    "`pricer_service.py` と `pricer_service2.py` の両方のファイルの上部に、次のようなコードがあります。\n",
+    "`secrets = [modal.Secret.from_name(\"hf-secret\")]`\n",
+    "\n",
+    "modal でのシークレットの設定によっては、`hf-secret` から `huggingface-secret` に変更する必要がある場合があります。\n",
+    "確認するには、このページにアクセスし、最初の列を確認してください。\n",
     "https://modal.com/secrets/\n",
+    "\n",
+    "※ コレは、既定値が違うだけなので、一律 `hf-secret` で設定すれば問題は起きなさそう。\n",
     "\n",
     "## Windowsの人々の重要なメモ：\n",
     "\n",
-    "次の行では、Jupyter Lab内から「Modal Deploy」を呼び出します。 Windowsの一部のバージョンでは、モーダルが絵文字を表示できない出力に絵文字を印刷するため、奇妙なユニコードエラーが発生します。それが発生した場合は、代わりにAnacondaプロンプトウィンドウまたはPowerShellを使用して、環境をアクティブにして、そこに `Modal Deploy Pricer_Service`を入力してください。次回「！モーダルデプロイ」も行うときに同じアプローチに従ってください。\n",
+    "次の行では、Jupyter Lab内から`modal deploy`を呼び出しています。Windowsの一部のバージョンでは、modalが出力に表示できない絵文字を出力するため、奇妙なUnicodeエラーが発生すると聞いています。その場合は、Anaconda PromptウィンドウまたはPowerShellで環境を有効化し、`modal deploy pricer_service`と入力してください。次回`!modal deploy`を実行する際も、同じ手順で実行してください。\n",
     "\n",
-    "別の方法として、ここから実行したい場合は、Jupyter Lab内でこのコードを実行できると言及しています。\n",
-    "```\n",
+    "別の方法として、何人かの受講生から、このコードをJupyter Lab内で実行できるという報告がありました。こちらから実行したい場合は、以下の手順に従ってください。\n",
+    "\n",
+    "```python\n",
     "# Check the default encoding\n",
     "print(locale.getpreferredencoding())  # Should print 'UTF-8'\n",
     "\n",
@@ -270,7 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# アクティブ化された環境でコマンドラインで「Modal Deploy -M Pricer_Service」を実行することもできます\n",
+    "# pricer_service.py は、pricer_ephemeral.py とほぼ同じ\n",
     "!modal deploy -m pricer_service"
    ]
   },
@@ -281,6 +341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# アプリケーション・インスタンス（関数のハンドラ）を取得するみたいな\n",
     "pricer = modal.Function.from_name(\"pricer-service\", \"price\")"
    ]
   },
@@ -291,9 +352,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# これにはしばらく時間がかかります！まもなくより高速なアプローチを使用します\n",
+    "# デプロイ済みアプリだが、ステートレスな関数実装なので時間がかかる。\n",
+    "# ２回目以降がコールドスタートでなければダウンロード時間だけ省略できる。\n",
+    "pricer.remote(\"Quadcast HyperX condenser mic, connects via usb-c to your computer for crystal clear audio\")\n",
     "\n",
-    "pricer.remote(\"Quadcast HyperX condenser mic, connects via usb-c to your computer for crystal clear audio\")"
+    "# 出力例 完全再現性あり（シード固定）\n",
+    "# 133.0"
    ]
   },
   {
@@ -303,8 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# アクティブ化された環境でコマンドラインで「Modal Deploy -M Pricer_Service2」を実行することもできます\n",
-    "\n",
+    "# pricer_service2.py は、pricer_service.py を関数からクラスに変更した実装\n",
     "!modal deploy -m pricer_service2"
    ]
   },
@@ -315,10 +378,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# アプリケーション・インスタンス（クラスのハンドラ）を取得するみたいな\n",
     "Pricer = modal.Cls.from_name(\"pricer-service\", \"Pricer\")\n",
-    "pricer = Pricer()\n",
-    "reply = pricer.price.remote(\"Quadcast HyperX condenser mic, connects via usb-c to your computer for crystal clear audio\")\n",
-    "print(reply)"
+    "pricer = Pricer() # コレはクラスのインスタンス化みたいなことか。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57b61b47-1bab-4148-b6e4-15208a54a4f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ステートフルなクラス実装に変更したデプロイ済みアプリなので初回以降は高速\n",
+    "# ２回目以降がコールドスタートでなければ初期化処理を全て省略できる。\n",
+    "pricer.price.remote(\"Quadcast HyperX condenser mic, connects via usb-c to your computer for crystal clear audio\")\n",
+    "\n",
+    "# 出力例 完全再現性あり（シード固定）\n",
+    "# 133.0"
    ]
   },
   {
@@ -326,7 +403,7 @@
    "id": "9c1b1451-6249-4462-bf2d-5937c059926c",
    "metadata": {},
    "source": [
-    "＃オプション：モーダルを暖かく保つ\n",
+    "# オプション：モーダルを暖かく保つ\n",
     "\n",
     "## Modal Pricerサービスの速度を向上させる方法\n",
     "\n",
@@ -337,7 +414,7 @@
     "`min_containers = 0`\n",
     "\n",
     "コンテナを生かし続けるために1にします。  \n",
-    "ただし、注意してください：これはクレジットを食べます！継続的にプロセスを実行するのが快適である場合にのみこれを行います。\n"
+    "ただし、注意してください：これはクレジットを消費します！継続的にプロセスを実行するのが快適である場合にのみこれを行います。\n"
    ]
   },
   {
@@ -355,6 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# `./agents/specialist_agent.py` は 単純なラッパークラス\n",
     "from agents.specialist_agent import SpecialistAgent"
    ]
   },
@@ -366,16 +444,11 @@
    "outputs": [],
    "source": [
     "agent = SpecialistAgent()\n",
-    "agent.price(\"iPad Pro 2nd generation\")"
+    "agent.price(\"iPad Pro 2nd generation\")\n",
+    "\n",
+    "# 出力例 完全再現性あり（シード固定）\n",
+    "# 299.0"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5a3181b-1310-4102-8d7d-52caf4c00538",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
